# fastapi-langgraph-agent-production-ready-template

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  docker-compose-base.yml  docker-compose-monitoring.yml  docker-compose.yml  mcp_servers.json  pyproject.toml  rag_providers.json  run.py  schema.sql
app/: main.py
app/api/v1/: api.py  approval.py  auth.py  chatbot_v1.py  chatbot_workflow.py  rag.py  sse.py
app/core/: config.py
app/core/langgraph/: base.py
app/core/langgraph/agents/: __init__.py  workers.py
app/core/langgraph/hitl/: __init__.py  manager.py
app/core/langgraph/tools/: __init__.py  rag_retrieve.py
app/core/langgraph/v1/: __init__.py  agent.py  middleware.py  multi_agent.py
app/core/langgraph/workflow/: __init__.py  graph.py  planner.py  schema.py  templates.py
app/core/langgraph/workflow/templates/: code_review.yaml  research_report.yaml
app/core/mcp/: __init__.py  client.py
app/core/prompts/: __init__.py  system.md
app/core/rag/: __init__.py  base.py  ingest.py  manager.py  schema.py
app/core/rag/providers/: __init__.py  http.py  pgvector.py  qdrant.py  ragflow.py
app/core/skills/: __init__.py  creator.py  registry.py  schema.py
app/core/skills/prompts/: api_design.md  code_review.md  data_analysis.md  sql_query.md
app/schemas/: __init__.py  approval.py
app/services/: database.py  llm.py
app/utils/: graph.py
docs/: AGENT_MODE_2_V1_SINGLE.md  AGENT_MODE_3_V1_MULTI.md  AGENT_MODE_4_WORKFLOW.md  CHANGELOG.md  NEW_FEATURES_GUIDE.md  PROJECT_DOCUMENTATION_CN.md  QUICK_START.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: MarkdownRenderer.jsx
frontend/src/i18n/: LanguageContext.jsx  en.json  zh.json
frontend/src/pages/: ApprovalsPage.jsx  ChatPage.jsx  KnowledgePage.jsx  LoginPage.jsx
grafana/dashboards/json/: llm_latency.json
prometheus/: prometheus.yml
scripts/: docker-entrypoint.sh
tests/: __init__.py  conftest.py
tests/test_hitl/: __init__.py  test_manager.py
tests/test_integration/: __init__.py  test_skills_mcp_integration.py
tests/test_mcp/: test_client.py
tests/test_skills/: __init__.py  test_creator.py  test_registry.py  test_schema.py
tests/test_workflow/: __init__.py  test_templates.py
